--- a/axelor-account/src/main/resources/views/Charts.xml
+++ b/axelor-account/src/main/resources/views/Charts.xml
@@ -39,7 +39,7 @@
 			FROM
 				account_invoice AS _invoice	
 			WHERE
-				_invoice.status_select != 1
+				_invoice.status_select = 3
 				AND (_invoice.operation_type_select=3 OR _invoice.operation_type_select=4)
 				AND DATE_PART('year',_invoice.invoice_date) 
 				IN (DATE_PART('year',CURRENT_DATE) - 1, DATE_PART('year',CURRENT_DATE) )
@@ -87,7 +87,7 @@
 			ON _user.id = :__user__
 			AND _invoice.company = _user.active_company	
 		    WHERE
-		      _invoice.status_select != 1
+		      _invoice.status_select = 3
 		      AND _invoice.invoice_date BETWEEN DATE(:fromDate) AND  DATE(:fromDate) + CAST(:monthSelect as int) * INTERVAL '1 month' 
 		      AND (_invoice.operation_type_select=3 OR _invoice.operation_type_select=4)
 
@@ -144,7 +144,7 @@
 			ON _user.id = :__user__
 			AND _invoice.company = _user.active_company	  
 	     WHERE
-	      _invoice.status_select != 1
+	      _invoice.status_select = 3
 	      AND _invoice.invoice_date BETWEEN DATE(:fromDate) AND  DATE(:fromDate) + CAST(:monthSelect as int) * INTERVAL '1 month' 
 	      AND _invoice.operation_type_select=3
 	      
@@ -201,7 +201,7 @@
 			base_product AS _product ON _line.product = _product.id
 		JOIN
 			base_product_category AS _category ON _category.id = _product.product_category
-		WHERE _invoice.status_select != 1
+		WHERE _invoice.status_select = 3
 		GROUP BY
 			_category.name
 		ORDER BY
@@ -229,6 +229,8 @@
 			base_address AS _address ON _address.id = _invoice.address
 		LEFT JOIN
 			base_country AS _country ON _country.id = _address.addressl7country
+		WHERE 
+			_invoice.status_select = 3
 		GROUP BY
 			_geo_region  
 	  ]]>
@@ -257,7 +259,7 @@
 	          account_invoice_line AS _line 
 	          ON _line.invoice=_invoice.id
 	        WHERE
-	          _invoice.status_select != 1
+	          _invoice.status_select = 3
 	          AND _invoice.invoice_date &gt;= now() - INTERVAL '12 month' 
 	          AND _invoice.operation_type_select=1
 	        GROUP BY 
@@ -301,7 +303,7 @@
 	      account_invoice_line AS _line 
 	      ON _line.invoice=_invoice.id
 	    WHERE
-	      _invoice.status_select != 1
+	      _invoice.status_select = 3
 	      AND _invoice.invoice_date &gt;= now() - INTERVAL '12 month' 
 	      AND _invoice.operation_type_select=1
 	      
@@ -340,7 +342,8 @@
 	        FROM
 	            account_invoice AS _invoice
 	        WHERE
-	          _invoice.invoice_date &gt;= now() - INTERVAL '12 month' 
+	          _invoice.invoice_date &gt;= now() - INTERVAL '12 month'
+	          AND _invoice.status_select = 3
 	        AND 
 	          _invoice.operation_type_select=1
 	        GROUP BY 
@@ -512,7 +515,7 @@
 	          base_company AS _company
 	          ON  _company.id = _user.active_company
 	          AND _company.id = self.company
-	    WHERE self.status_select != 1 AND self.operation_type_select=3 AND self.invoice_date &lt; DATE(:todayDate) 
+	    WHERE self.status_select = 3 AND self.operation_type_select=3 AND self.invoice_date &lt; DATE(:todayDate) 
 	        AND self.invoice_date &gt; DATE(:todayDate) - (CAST(:monthSelect as int)) * INTERVAL '1 month'  
 	    GROUP BY 
 	          _month
@@ -544,7 +547,7 @@
 		      		    base_company AS _company
 		        		ON  _company.id = _user.active_company
 		        		AND _company.id = _invoice.company
-			     	WHERE _invoice.operation_type_select = 3 AND _invoice.status_select != 1
+			     	WHERE _invoice.operation_type_select = 3 AND _invoice.status_select = 3
 			     		AND _invoice.invoice_date &lt; DATE(:todayDate) 
 			     		AND _invoice.invoice_date > DATE(:todayDate) - (CAST(:monthSelect as int)) * INTERVAL '1 month' 
 			   ) AS _account_invoice
@@ -576,7 +579,7 @@
 	                    base_company AS _company
 	                    ON  _company.id = _user.active_company
 	                    AND _company.id = _invoice.company
-	                WHERE _invoice.operation_type_select = 3 AND _invoice.status_select != 1
+	                WHERE _invoice.operation_type_select = 3 AND _invoice.status_select = 3
 	                	AND _invoice.invoice_date &lt; DATE(:todayDate) 
 	                	AND _invoice.invoice_date > DATE(:todayDate) - (CAST(:monthSelect as int)) * INTERVAL '1 month'
 	            ) AS _account_invoice
@@ -608,7 +611,7 @@
 	      ON  _company.id = _user.active_company
 	      AND _company.id = self.company
 	  WHERE 
-	     self.status_select != 1 AND self.operation_type_select=1 AND self.invoice_date &lt; DATE(:todayDate) 
+	     self.status_select = 3 AND self.operation_type_select=1 AND self.invoice_date &lt; DATE(:todayDate) 
 	     AND self.invoice_date &gt; DATE(:todayDate) - (CAST(:monthSelect as int)) * INTERVAL '1 month'   
 	  GROUP BY _month
 	  ORDER BY
@@ -642,7 +645,7 @@
 		        base_company AS _company
 		        ON  _company.id = _user.active_company
 		        AND _company.id = _invoice.company
-		    WHERE _invoice.status_select != 1 AND _invoice.operation_type_select=1 AND _invoice.invoice_date &lt; DATE(:todayDate) 
+		    WHERE _invoice.status_select = 3 AND _invoice.operation_type_select=1 AND _invoice.invoice_date &lt; DATE(:todayDate) 
 		    AND _invoice.invoice_date > DATE(:todayDate) - (CAST(:monthSelect as int)) * INTERVAL '1 month' 
 		   ) AS _account_invoice
 	   WHERE _currency.id=_account_invoice._currency	 
@@ -673,7 +676,7 @@
 	                     base_company AS _company
 	                     ON  _company.id = _user.active_company
 	                     AND _company.id = _invoice.company
-	                WHERE _invoice.status_select != 1 AND _invoice.operation_type_select=1 AND _invoice.invoice_date &lt; DATE(:todayDate) AND _invoice.invoice_date > DATE(:todayDate) - (CAST(:monthSelect as int)) * INTERVAL '1 month'
+	                WHERE _invoice.status_select = 3 AND _invoice.operation_type_select=1 AND _invoice.invoice_date &lt; DATE(:todayDate) AND _invoice.invoice_date > DATE(:todayDate) - (CAST(:monthSelect as int)) * INTERVAL '1 month'
 	            ) AS _account_invoice
 	    WHERE 
 	        _payment_condition.id=_account_invoice._payment_condition	 
@@ -709,7 +712,7 @@
 	        ON  _company.id = _user.active_company
 	        AND _company.id = self.company
 	      WHERE
-	        self.status_select != 1 AND self.invoice_date BETWEEN DATE(:todayDate) - (CAST(:monthSelect as int)) * INTERVAL '1 month' AND DATE(:todayDate) AND 
+	        self.status_select = 3 AND self.invoice_date BETWEEN DATE(:todayDate) - (CAST(:monthSelect as int)) * INTERVAL '1 month' AND DATE(:todayDate) AND 
 	        self.operation_type_select=3 
 	      )	 
 	    UNION ALL
@@ -801,7 +804,7 @@
 	        ON  _company.id = _user.active_company
 	        AND _company.id = self.company
 	      WHERE
-	        self.status_select != 1 AND self.invoice_date BETWEEN DATE(:todayDate) - (CAST(:monthSelect as int)) * INTERVAL '1 month' AND DATE(:todayDate) AND 
+	        self.status_select = 3 AND self.invoice_date BETWEEN DATE(:todayDate) - (CAST(:monthSelect as int)) * INTERVAL '1 month' AND DATE(:todayDate) AND 
 	        self.operation_type_select=3 
 	      )	 
 	    UNION ALL
@@ -877,7 +880,7 @@
 	        ON  _company.id = _user.active_company
 	        AND _company.id = self.company
 	      WHERE
-	        self.status_select != 1 AND self.invoice_date BETWEEN DATE(:todayDate) - (CAST(:monthSelect as int)) * INTERVAL '1 month' AND DATE(:todayDate) AND
+	        self.status_select = 3 AND self.invoice_date BETWEEN DATE(:todayDate) - (CAST(:monthSelect as int)) * INTERVAL '1 month' AND DATE(:todayDate) AND
 	        self.operation_type_select=1
 	      )	 
 	    UNION ALL
