RM#38223 Contract : Add an event + Remider endDate and invoicingDate

--- a/axelor-contract/src/main/resources/views/AppContract.xml
+++ b/axelor-contract/src/main/resources/views/AppContract.xml
@@ -13,6 +13,7 @@
 			<panel name="generalPanel" title="General" colSpan="12">
 				<field name="isUnchangableContract" colSpan="4" widget="boolean-switch"/>
 				<field name="isAmendmentManagement" colSpan="4" widget="boolean-switch"/>
+				<field name="contractReminderTemplate" domain="self.metaModel.name = 'Contract'"/>
 			</panel>
             <panel name="advancedPanel" title="Advanced" colSpan="12">
 				<field name="isConfigContract" colSpan="4" widget="boolean-switch"/>
@@ -22,6 +23,7 @@
 				<field name="isInvoicingManagement" colSpan="4" widget="boolean-switch"/>
 				<field name="isConsumptionManagement" colSpan="4" widget="boolean-switch" hidden="true" showIf="isInvoicingManagement"/>
 				<field name="isAdditionalBenefitManagement" colSpan="4" widget="boolean-switch" hidden="true" showIf="isInvoicingManagement"/>
+				<field name="contractInvoicingReminderTemplate" domain="self.metaModel.name = 'Contract'"/>
 			</panel>
 		</panel>
 		
