--- a/axelor-contract/src/main/resources/views/Contract.xml
+++ b/axelor-contract/src/main/resources/views/Contract.xml
@@ -21,6 +21,7 @@
           onSave="action-contract-method-is-valid">
         <toolbar>
             <button name="printContractBtn" title="Print" hidden="true" icon="fa-print" onClick="notImplementedYet"/>
+            <button name="scheduleEventBtn" title="Schedule Event" onClick="save,action-contract-method-schedule-event"/>
         </toolbar>
         <panel name="mainPanel">
             <panel colSpan="9" name="generalInfoPanel">
@@ -44,6 +45,7 @@
                 <field if="__config__.app.getApp('contract').getIsInvoicingManagement()" colSpan="4" name="currency" readonlyIf="statusSelect >= 2" canEdit="false"/>
                 <field name="name" colSpan="12" css="highlight" hideIf="$readonly() &amp;&amp; !name &amp;&amp; statusSelect >= 2"/>
                 <field name="project" colSpan="8" domain="self.clientPartner=:partner"/>
+                <field name="assignedTo" colSpan="4"/>
                 <panel name="contractDatesPanel" title="Contract Dates" hidden="true" showIf="id" colSpan="12">
                     <field name="createdOn" colSpan="3"/>
                     <field name="createdBy" colSpan="3"/>
@@ -160,6 +162,7 @@
                     <button name="terminatedBtn" title="Terminate" hideIf="terminatedManually || statusSelect == 3" colSpan="3" onClick="save,action-contract-method-terminated"/>
                 </panel>
             </panel>
+            <panel-dashlet name="contractEventPanel" title="Events" colSpan="12" action="action-contract-view-events"/>
             <panel if="__config__.app.getApp('contract').isConfigContract" title="Config." name="configPanel">
               <panel name="configSubPanel" title="Invoicing" if="__config__.app.getApp('contract').isInvoicingManagement" colSpan="12">
                 <field name="isInvoicingManagement" onChange="action-contract-attrs-required-payment-config,action-contract-attrs-partner-payment-config" colSpan="12" widget="boolean-switch"/>
@@ -375,6 +378,17 @@
         <call class="com.axelor.apps.contract.web.ContractController"
               method="isValid"/>
     </action-method>
+
+	<action-method name="action-contract-method-schedule-event">
+  		<call class="com.axelor.apps.contract.web.ContractController" method="scheduleEvent"/>
+  	</action-method>
+  	
+  	<action-view name="action-contract-view-events" model="com.axelor.apps.crm.db.Event" title="Events">
+        <view type="grid" name="event-grid" />
+        <view type="form" name="event-form" />
+        <domain>self.relatedToSelectId = :contractId AND self.relatedToSelect = 'com.axelor.apps.contract.db.Contract'</domain>
+        <context name="contractId" expr="eval: id"/>
+    </action-view>
 
     <action-validate name="action-contract-validate-on-going">
         <alert message="Attention the contract will have as starting date the provisional activation
