--- a/axelor-crm/src/main/resources/views/AppCrm.xml
+++ b/axelor-crm/src/main/resources/views/AppCrm.xml
@@ -7,6 +7,7 @@
 		<panel name="mainPanel">
 			<field name="assignableUsers"/>
 			<field name="groupsAssignable" showIf="assignableUsers == 1" widget="TagSelect" requiredIf="assignableUsers == 1"/>
+			<field name="minAmtTopOpportunities"/>
 			<field name="displayCustomerDescriptionInOpportunity" widget="boolean-switch"/>
 		</panel>
 		<panel name="actionPanel">
