RM#36825 TEMPLATE : test

--- a/axelor-base/src/main/resources/views/Message.xml
+++ b/axelor-base/src/main/resources/views/Message.xml
@@ -57,6 +57,7 @@
     </form>
     
     <action-group name="action-group-base-message-onnew">
+    	<action name="action-message-method-display-generate-message" if="_message != null"/>
     	<action name="action-message-record-default"/>
     	<action name="action-message-record-mail-account"/>
     	<action name="action-message-record-get-signature"/>
